--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,21 +3,21 @@ asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
 blinker==1.7.0; python_version >= '3.8'
-boto3==1.34.45; python_version >= '3.8'
-botocore==1.34.45; python_version >= '3.8'
+boto3==1.34.79; python_version >= '3.8'
+botocore==1.34.79; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
-cachetools==5.3.2; python_version >= '3.7'
+cachetools==5.3.3; python_version >= '3.7'
 certifi==2024.2.2; python_version >= '3.6'
-cffi==1.16.0; python_version >= '3.8'
+cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 ciso8601==2.3.1
 click==8.1.7; python_version >= '3.7'
 clickhouse-driver==0.2.7; python_version >= '3.7' and python_version < '4'
 clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
-cmdstanpy==1.2.1; python_version >= '3.8'
-contourpy==1.2.0; python_version >= '3.9'
+cmdstanpy==1.2.2; python_version >= '3.8'
+contourpy==1.2.1; python_version >= '3.9'
 convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
-cryptography==41.0.7; python_version >= '3.7'
+cryptography==42.0.5; python_version >= '3.7'
 cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
 ephem==4.1.5
@@ -27,18 +27,20 @@ flask-cors==4.0.0
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
-fonttools==4.49.0; python_version >= '3.8'
-fsspec==2024.2.0; python_version >= '3.8'
-future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+fonttools==4.51.0; python_version >= '3.8'
+fsspec==2024.3.1; python_version >= '3.8'
+future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-google-api-core==2.17.1; python_version >= '3.7'
-google-auth==2.28.0; python_version >= '3.7'
-google-cloud-bigquery==3.17.2; python_version >= '3.7'
+google-api-core[grpc]==2.18.0; python_version >= '3.7'
+google-auth==2.29.0
+google-cloud-bigquery==3.20.1; python_version >= '3.7'
 google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.7.0; python_version >= '3.7'
-googleapis-common-protos==1.62.0; python_version >= '3.7'
+googleapis-common-protos==1.63.0; python_version >= '3.7'
 greenlet==3.0.3; python_version >= '3.7'
+grpcio==1.62.1
+grpcio-status==1.62.1
 holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.6; python_version >= '3.5'
@@ -49,48 +51,49 @@ itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.3; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 kiwisolver==1.4.5; python_version >= '3.7'
-leb128==1.0.5
+leb128==1.0.7
 lunarcalendar==0.0.9; python_version >= '2.7' and python_version < '4'
 lz4==4.3.3; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
-matplotlib==3.8.3; python_version >= '3.9'
+matplotlib==3.8.4; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
 numpy==1.23.5; python_version >= '3.8'
 oauth2==1.9.0.post1
 oauthlib==2.1.0
 openpyxl==3.1.2; python_version >= '3.6'
-packaging==23.2; python_version >= '3.7'
+packaging==24.0; python_version >= '3.7'
 pandas[performance]==2.0.3; python_version >= '3.8'
 pillow==10.2.0; python_version >= '3.8'
 prophet==1.1.1; python_version >= '3.7'
+proto-plus==1.23.0; python_version >= '3.6'
 protobuf==4.25.3; python_version >= '3.8'
 psycopg2==2.9.7; python_version >= '3.6'
 pure-sasl==0.6.2
-pyasn1==0.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-pyasn1-modules==0.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+pyasn1==0.6.0; python_version >= '3.8'
+pyasn1-modules==0.4.0; python_version >= '3.8'
 pyathena==3.0.7; python_full_version >= '3.8.1'
-pycparser==2.21
+pycparser==2.22; python_version >= '3.8'
 pydruid==0.6.5
 pyhive==0.7.0
 pyldap==3.0.0
 pymeeus==0.5.12
-pyparsing==3.1.1; python_full_version >= '3.6.8'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==3.1.2; python_full_version >= '3.6.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-ldap==3.4.4; python_version >= '3.6'
 pytz==2024.1
 requests==2.31.0; python_version >= '3.7'
 requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
-s3transfer==0.10.0; python_version >= '3.8'
+s3transfer==0.10.1; python_version >= '3.8'
 sasl==0.3.1
-setuptools==69.1.0; python_version >= '3.8'
+setuptools==69.2.0; python_version >= '3.8'
 setuptools-git==1.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.4.51; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+sqlalchemy==1.4.52; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-bigquery==1.8.0; python_version < '3.12' and python_version >= '3.7'
 sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
-stanio==0.3.0; python_version >= '3.8'
+stanio==0.5.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
 thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
@@ -99,39 +102,39 @@ trino[sqlalchemy]==0.328.0; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
 tzlocal==5.2; python_version >= '3.8'
 urllib3[socks]==2.0.7; python_version >= '3.7'
-werkzeug==2.3.8; python_version >= '3.8'
-wheel==0.42.0; python_version >= '3.7'
+werkzeug==3.0.2; python_version >= '3.8'
+wheel==0.43.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
 zope.interface==6.2; python_version >= '3.7'
 zstd==1.5.5.1
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==3.1.1; python_version ~= '3.9'
-apispec[yaml]==6.4.0; python_version >= '3.8'
-apsw==3.45.1.0; python_version >= '3.8'
+apache-superset==4.0.0; python_version ~= '3.9'
+apispec[yaml]==6.6.0; python_version >= '3.8'
+apsw==3.45.2.0; python_version >= '3.8'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.1.2; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
-bottleneck==1.3.7
+bottleneck==1.3.8
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cattrs==23.2.3; python_version >= '3.8'
 celery==5.3.6; python_version >= '3.8'
-click-didyoumean==0.3.0; python_full_version >= '3.6.2' and python_full_version < '4.0.0'
+click-didyoumean==0.3.1; python_full_version >= '3.6.2'
 click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.3
-croniter==2.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==2.0.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
-email-validator==2.1.0.post1; python_version >= '3.8'
+email-validator==2.1.1; python_version >= '3.8'
 exceptiongroup==1.2.0; python_version < '3.11'
-flask-appbuilder==4.4.0; python_version ~= '3.7'
+flask-appbuilder==4.4.1; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.1.0; python_version >= '3.7'
 flask-compress==1.14
@@ -139,7 +142,7 @@ flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
 flask-limiter==3.5.1; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
-flask-session==0.6.0; python_version >= '3.7'
+flask-session==0.8.0; python_version >= '3.8'
 flask-sqlalchemy==2.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 flask-talisman==1.1.0
 flask-wtf==1.2.1; python_version >= '3.8'
@@ -150,25 +153,26 @@ gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 humanize==4.9.0; python_version >= '3.8'
-importlib-metadata==7.0.1; python_version >= '3.8'
-importlib-resources==6.1.1; python_version >= '3.8'
+importlib-metadata==7.1.0; python_version >= '3.8'
+importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
 jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
-kombu==5.3.5; python_version >= '3.8'
+kombu==5.3.6; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.9.0; python_version >= '3.7'
+limits==3.10.1; python_version >= '3.7'
 llvmlite==0.42.0; python_version >= '3.9'
 mako==1.3.2; python_version >= '3.8'
-markdown==3.5.2; python_version >= '3.8'
+markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
-marshmallow==3.20.2; python_version >= '3.8'
+marshmallow==3.21.1; python_version >= '3.8'
 marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
-msgpack==1.0.7; python_version >= '3.8'
-nh3==0.2.15
-numba==0.59.0
-numexpr==2.9.0
+msgpack==1.0.8; python_version >= '3.8'
+msgspec==0.18.6; python_version >= '3.8'
+nh3==0.2.17
+numba==0.59.1
+numexpr==2.10.0
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.4.0; python_version >= '3.6'
@@ -182,30 +186,31 @@ pyarrow==14.0.2; python_version >= '3.8'
 pygments==2.17.2; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
 pynacl==1.5.0; python_version >= '3.6'
+pyopenssl==24.1.0
 pysocks==1.7.1
 python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.33.0; python_version >= '3.8'
+referencing==0.34.0; python_version >= '3.8'
 requests-cache==1.2.0; python_version >= '3.8'
-rich==13.7.0; python_full_version >= '3.7.0'
+rich==13.7.1; python_full_version >= '3.7.0'
 rpds-py==0.18.0; python_version >= '3.8'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh==1.2.15; python_version >= '3.8'
+shillelagh[gsheetsapi]==1.2.19; python_version >= '3.8'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.27.0; python_version >= '3.6'
-sniffio==1.3.0; python_version >= '3.7'
+slack-sdk==3.27.1; python_version >= '3.6'
+sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==20.11.0; python_version >= '3.7'
+sqlglot==23.7.0; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.24.0; python_version >= '3.8'
+trio==0.25.0; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
-typing-extensions==4.9.0; python_version >= '3.8'
+typing-extensions==4.11.0; python_version >= '3.8'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
@@ -214,4 +219,4 @@ wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.1.2; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
-zipp==3.17.0; python_version >= '3.8'
+zipp==3.18.1; python_version >= '3.8'
