--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,9 +2,9 @@
 asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
-blinker==1.7.0; python_version >= '3.8'
-boto3==1.34.79; python_version >= '3.8'
-botocore==1.34.79; python_version >= '3.8'
+blinker==1.8.1; python_version >= '3.8'
+boto3==1.34.94; python_version >= '3.8'
+botocore==1.34.94; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.3; python_version >= '3.7'
 certifi==2024.2.2; python_version >= '3.6'
@@ -31,23 +31,23 @@ fonttools==4.51.0; python_version >= '3.8'
 fsspec==2024.3.1; python_version >= '3.8'
 future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-google-api-core[grpc]==2.18.0; python_version >= '3.7'
+google-api-core[grpc]==2.19.0; python_version >= '3.7'
 google-auth==2.29.0
-google-cloud-bigquery==3.20.1; python_version >= '3.7'
+google-cloud-bigquery==3.21.0; python_version >= '3.7'
 google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.7.0; python_version >= '3.7'
 googleapis-common-protos==1.63.0; python_version >= '3.7'
 greenlet==3.0.3; python_version >= '3.7'
-grpcio==1.62.1
-grpcio-status==1.62.1
+grpcio==1.63.0
+grpcio-status==1.62.2
 holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-idna==3.6; python_version >= '3.5'
+idna==3.7; python_version >= '3.5'
 impyla==0.18.0
 infi.clickhouse-orm==2.1.3
 iso8601==2.1.0; python_version >= '3.7' and python_version < '4.0'
-itsdangerous==2.1.2; python_version >= '3.7'
+itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.3; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 kiwisolver==1.4.5; python_version >= '3.7'
@@ -86,7 +86,7 @@ requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
 s3transfer==0.10.1; python_version >= '3.8'
 sasl==0.3.1
-setuptools==69.2.0; python_version >= '3.8'
+setuptools==69.5.1; python_version >= '3.8'
 setuptools-git==1.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.52; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -105,13 +105,13 @@ urllib3[socks]==2.0.7; python_version >= '3.7'
 werkzeug==3.0.2; python_version >= '3.8'
 wheel==0.43.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
-zope.interface==6.2; python_version >= '3.7'
+zope.interface==6.3; python_version >= '3.7'
 zstd==1.5.5.1
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
 apache-superset==4.0.0; python_version ~= '3.9'
-apispec[yaml]==6.6.0; python_version >= '3.8'
-apsw==3.45.2.0; python_version >= '3.8'
+apispec[yaml]==6.6.1; python_version >= '3.8'
+apsw==3.45.3.0; python_version >= '3.8'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
@@ -121,25 +121,25 @@ billiard==4.2.0; python_version >= '3.7'
 bottleneck==1.3.8
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cattrs==23.2.3; python_version >= '3.8'
-celery==5.3.6; python_version >= '3.8'
+celery==5.4.0; python_version >= '3.8'
 click-didyoumean==0.3.1; python_full_version >= '3.6.2'
 click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.3
-croniter==2.0.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==2.0.5; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
 email-validator==2.1.1; python_version >= '3.8'
-exceptiongroup==1.2.0; python_version < '3.11'
+exceptiongroup==1.2.1; python_version < '3.11'
 flask-appbuilder==4.4.1; python_version ~= '3.7'
 flask-babel==2.0.0
-flask-caching==2.1.0; python_version >= '3.7'
-flask-compress==1.14
+flask-caching==2.2.0; python_version >= '3.8'
+flask-compress==1.15
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.5.1; python_version >= '3.8'
+flask-limiter==3.6.0; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
@@ -158,11 +158,11 @@ importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
 jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
-kombu==5.3.6; python_version >= '3.8'
+kombu==5.3.7; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.10.1; python_version >= '3.7'
+limits==3.11.0; python_version >= '3.8'
 llvmlite==0.42.0; python_version >= '3.9'
-mako==1.3.2; python_version >= '3.8'
+mako==1.3.3; python_version >= '3.8'
 markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 marshmallow==3.21.1; python_version >= '3.8'
@@ -178,7 +178,7 @@ outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.4.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.2.0; python_version >= '3.8'
+platformdirs==4.2.1; python_version >= '3.8'
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
@@ -192,7 +192,7 @@ python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.34.0; python_version >= '3.8'
+referencing==0.35.0; python_version >= '3.8'
 requests-cache==1.2.0; python_version >= '3.8'
 rich==13.7.1; python_full_version >= '3.7.0'
 rpds-py==0.18.0; python_version >= '3.8'
@@ -204,7 +204,7 @@ slack-sdk==3.27.1; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==23.7.0; python_version >= '3.7'
+sqlglot==23.12.2; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -220,3 +220,4 @@ wtforms==3.1.2; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
 zipp==3.18.1; python_version >= '3.8'
+zstandard==0.22.0; platform_python_implementation != 'PyPy'
