--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,21 @@
 alembic==1.13.1; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
 apache-superset==4.0.0; python_version ~= '3.9'
-apispec[yaml]==6.6.0; python_version >= '3.8'
-apsw==3.45.2.0; python_version >= '3.8'
+apispec[yaml]==6.6.1; python_version >= '3.8'
+apsw==3.45.3.0; python_version >= '3.8'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.1.2; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
-blinker==1.7.0; python_version >= '3.8'
+blinker==1.8.1; python_version >= '3.8'
 bottleneck==1.3.8
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.3; python_version >= '3.7'
 cattrs==23.2.3; python_version >= '3.8'
-celery==5.3.6; python_version >= '3.8'
+celery==5.4.0; python_version >= '3.8'
 certifi==2024.2.2; python_version >= '3.6'
 cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
@@ -27,20 +27,20 @@ click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.3
-croniter==2.0.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==2.0.5; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cryptography==42.0.5; python_version >= '3.7'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
 email-validator==2.1.1; python_version >= '3.8'
-exceptiongroup==1.2.0; python_version < '3.11'
+exceptiongroup==1.2.1; python_version < '3.11'
 flask==2.3.3; python_version >= '3.8'
 flask-appbuilder==4.4.1; python_version ~= '3.7'
 flask-babel==2.0.0
-flask-caching==2.1.0; python_version >= '3.7'
-flask-compress==1.14
+flask-caching==2.2.0; python_version >= '3.8'
+flask-compress==1.15
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.5.1; python_version >= '3.8'
+flask-limiter==3.6.0; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
@@ -57,19 +57,19 @@ h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 holidays==0.25; python_version >= '3.7'
 humanize==4.9.0; python_version >= '3.8'
-idna==3.6; python_version >= '3.5'
+idna==3.7; python_version >= '3.5'
 importlib-metadata==7.1.0; python_version >= '3.8'
 importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
-itsdangerous==2.1.2; python_version >= '3.7'
+itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.3; python_version >= '3.7'
 jsonschema==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
-kombu==5.3.6; python_version >= '3.8'
+kombu==5.3.7; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.10.1; python_version >= '3.7'
+limits==3.11.0; python_version >= '3.8'
 llvmlite==0.42.0; python_version >= '3.9'
-mako==1.3.2; python_version >= '3.8'
+mako==1.3.3; python_version >= '3.8'
 markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
@@ -89,7 +89,7 @@ pandas[performance]==2.0.3; python_version >= '3.8'
 paramiko==3.4.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.2.0; python_version >= '3.8'
+platformdirs==4.2.1; python_version >= '3.8'
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
@@ -109,7 +109,7 @@ python-geohash==0.8.5
 pytz==2024.1
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.34.0; python_version >= '3.8'
+referencing==0.35.0; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-cache==1.2.0; python_version >= '3.8'
 rich==13.7.1; python_full_version >= '3.7.0'
@@ -125,7 +125,7 @@ sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.52; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==23.7.0; python_version >= '3.7'
+sqlglot==23.12.2; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -144,3 +144,4 @@ wtforms==3.1.2; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
 zipp==3.18.1; python_version >= '3.8'
+zstandard==0.22.0; platform_python_implementation != 'PyPy'
